@@ -83,6 +83,11 @@
 
 #     Additional flags for use with configuration.
 
+# CFLAGS_FOR_TARGET
+
+#     Additional flags used when building the target libraries (e.g. for
+#     compact libraries) picked up automatically by make.
+
 # DO_PDF
 
 #     Either --pdf or --no-pdf to control whether we build and install PDFs of
